# NativeThroat

./: CMakeLists.txt  README.md
OOGBuild/: build.bat
src/: AudioEngine.cpp  AudioEngine.h  native_audio.cpp
